<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NUMAD-Kevin Pacheco</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- Main Screen -->
    <string name="member_button">About</string>
    <string name="sudoku_button">Sudoku</string>
    <string name="crash_button">Generate Error</string>
    <string name="exit_button">Quit</string>
    <string name="boggle_button">Boggle</string>
    <string name="persistent_button">Persistent Boggle</string>
    <string name="finalproject_button">Final Project</string>

    <!-- Team Members -->
    <string name="title_activity_team_members">Team Members</string>
    <string name="member_info">Kevin Pacheco (pacheco.ke@husky.neu.edu)</string>
    <string name="image_info">Kevins Face</string>
    <string name="phone_id">Phone Unique ID</string>

    <!-- Sudoku -->
    <string name="app_name_sudoku">Sudoku</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings…</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
        Sudoku is a logic-based number placement puzzle.
        Starting with a partially completed 9x9 grid, the
        objective is to fill the grid so that each
        row, each column, and each of the 3x3 boxes
        (also called <i>blocks</i>) contains the digits
        1 to 9 exactly once.	</string>

    <!-- Boggle -->
    <string name="boggle_submit">Submit</string>
    <string name="boggle_clear">Clear</string>
    <string name="pause_title">Pause</string>
    <string name="points"></string>
    <string name="time"></string>
    <string name="how_to_play_title">How to PLay</string>
    <string name="boggle_how_to_play">How to Play</string>
    <string name="boggle_how_to_play_text">Welcome to Boggle!\n
        To play, select the letters on the Boggle board to form a word.\n
        Only valid words, with 3 letters or more, in the Boggle dictionary are accepted.\n
        Once you select the letters to form a word, hit the "Submit" button.\n
        You can connect letters vertically, horizontally, or diagonally.\n
        \n
        Points are awarded for each correct word.  The more letters you use,\n
        the more points you will get!  You will receive one point for a three\n
        letter word, and an additional point for every letter over three letters.
        \n
        Enjoy!</string>
    <string name="boggle_credits">Acknowledgements</string>
    <string name="boggle_credits_text">Special Thanks to:\n
        Rashmi Jagadish\n
        Stack Overflow community\n
        Android Development community\n
        http://www.fontspace.com/\n
        Google Images\n
        ByTheButterfly\n
        MaciejGórski\n
        http://butterflyutopia.com/\n
        deepa\n
        Vinay\n</string>
    <string name="boggle_title">Boggle</string>
    <string name="boggle_newgame">New Game</string>
    <string name="boggle_pause_label">Pause</string>
    <string name="boggle_quit_label">Quit</string>
    <string name="boggle_settings_label">Options</string>
    <string name="boggle_resume">Resume</string>
    <string name="persistent_label">Persistent Boggle</string>

    <!-- Persistent Boggle -->
    <string name="multiplayer_tab_label_current_games">Current Games</string>
    <string name="multiplayer_tab_label_received">Received</string>
    <string name="multiplayer_tab_label_sent">Sent</string>
    <string name="multiplayer_tab_label_high_scores">High Scores</string>
    <string name="multiplayer_button_label_send_request">New Request</string>
    <string name="multiplayer_button_label_back">Back</string>
    <string name="multiplayer_sent_button_label_delete">Delete</string>
    <string name="multiplayer_received_button_label_accept">Accept</string>
    <string name="multiplayer_received_button_label_reject">Reject</string>
    <string name="multiplayer_game_loading">Game is Loading...</string>
    <string name="multiplayer_requests_button_label_rammus">OK</string>
    <string name="multiplayer_requests_button_label_cancel">Cancel</string>
    <string name="multiplayer_current_games_button_label_VS">VS</string>
    <string name="multiplayer_game_back_label">Back</string>
    <string name="multiplayer_game_clear_word_label">Clear Word</string>
    <string name="multiplayer_game_submit_word_label">Submit Word</string>
    <string name="alarms_active">Alarms active!</string>
    <string name="boggle_multiplayer_Label">Persistent Boogle</string>
    <string name="logOut_button">Log Out</string>

    <!-- Butterfly Catcher -->
    <string name="butterflycatcher_app_name">MAD-Butterfly Catcher</string>
    <string name="butterflycatcher_menu_legalnotices">Legal Notices</string>
    <string name="butterflycatcher_title_activity_main_menu">Butterfly Catcher</string>
    <string name="butterflycatcher_action_settings">Settings</string>
    <string name="butterflycatcher_title_activity_settings">Settings</string>
    <string name="butterflycatcher_clear_data">To clear data, <u>click here</u>.</string>
    <string name="butterflycatcher_title_activity_score_screen">ScoreScreen</string>
    <string name="butterflycatcher_title_activity_instructions">Instructions</string>
    <string name="butterflycatcher_music_label">Music</string>
    <string name="butterflycatcher_notification_label">Notifications</string>
    <string name="title_activity_description">Description</string>
    <string name="action_settings">Settings</string>
    <string name="description">
       Butterfly Catcher is an innovative game that allows you to play in our virtual world while exploring your
        real world.  In Butterfly Catcher, you will find yourself surrounded by butterflies as you walk down the street to a friend\'s
        house or to the grocery store.  Watch the many different types of butterflies spawn in your map, only feet away from you.  Enjoy 
        capturing these butterflies and seeing them in your inventory.  
        Boast your high score to your friends, and maybe even attempt to capture the Legendary butterflies.  
        Butterfly Catcher suits many play styles.  There is no rush, no stress, no time limits, no linear objectives.  The game is what you make of it and how you  choose to play.  
        We hope you enjoy this game.  Happy hunting.
        
    </string>
    <string name="share">Click the score to share!</string>

</resources>