<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score_screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Settings" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/settings" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_centerVertical="true"
        android:background="@color/black_overlay"
        android:checked="false"
        android:paddingLeft="40dp"
        android:text="@string/butterflycatcher_music_label"
        android:textColor="@color/green" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="20dp"
        android:background="@color/black_overlay"
        android:checked="false"
        android:paddingLeft="40dp"
        android:text="@string/butterflycatcher_notification_label"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/checkBox2"
        android:clickable="true"
        android:onClick="onClickHereButtonClick"
        android:text="@string/butterflycatcher_clear_data"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/transparent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/menuback_button_custom"
        android:onClick="onBackButtonClick" />

</RelativeLayout>